# WinGui

./: CMakeLists.txt  Example.cpp  README.md  WinGui.cpp  WinGui.h  resource.h  resource.rc
docs/: WinGui_CenterWindow.md  WinGui_CreateWindow.md  WinGui_CreateWindowEx.md  WinGui_Init.md  WinGui_RegisterClassEx.md  WinGui_SetAnchors.md  WinGui_UnregisterClass.md
